# NYCU-Pattern-Recognition

./: README.md
HW1/: classifier.py  data_loader.py  evaluation.py  main.py  pyproject.toml  subset.py
HW2/: data_loader.py  pyproject.toml  task1.py  task2.py  task2_plot.py  task3.py  utils.py
HW3/: main.py
HW3/src/: __init__.py  bonus_bayesian.py  clustering.py  datasets.py  experiment2.py  experiment3.py  metrics.py  visualization.py
